# ipns-xumm-api

./: .gitignore  Dockerfile  README.md  install_ipfs.sh  pyproject.toml  remove_ipfs.sh
server/: __main__.py  app.py
server/controllers/: authentication_controller.py  ipns_controller.py
server/middleware/: __init__.py  utils.py
server/models/: ipns_pin_request.py  ipns_pin_response.py  ipns_publish_request.py  ipns_publish_response.py  ipns_resolve_request.py  ipns_resolve_response.py
server/services/: ipfs.py
server/swagger/: latest.yaml
server/test/: test_ipns_controller.py
